# embedded-systems-cw1

./: .dockerignore  Dockerfile  README.md
.github/workflows/: docker.yml  frontend.yml  rpi-app.yml  server.yml
frontend/: .editorconfig  .env  .gitignore  README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: API.js  App.css  App.js  App.test.js  index.css  index.js
frontend/src/Components/: AddModalWithRenameSupport.js  AddNewBinsForm.js  Backdrop.js  Bins.js  Bins.module.css  BinsList.js  ModalWithRenameSupport.js
frontend/src/Components/BasicComponents/: AnimatedProgressProvider.js  Backdrop.js  CircularProgressBar.js  CustomHook.js  DropDown.js  Map.js  Modal.js  ModalUserDefined.js
frontend/src/Components/Bins/: Bin.js  Bins.js  Bins.module.css  BinsList.js
frontend/src/Components/Layout/: Layout.js  MainNavigation.js  UserProfile.js
frontend/src/Components/Map/: Map.css  Map.js  MapModal.js  Routing.js  popupStyles.js
frontend/src/Components/ModalUserDefined/: AddModalUserDefined.js  ModalUserDefined.js
frontend/src/Components/ModalWithRenameSupport/: AddModalWithRenameSupport.js  ModalWithRenameSupport.js
frontend/src/Components/ui/: Card.js  Card.module.css
frontend/src/pages/: AddBinsForm.js  AllBins.js  AllOfMyBins.js  LoginPage.js  MyBins.js  UnownedBins.js
marketing/: .gitignore  README.md  index.html  package-lock.json  package.json
marketing/src/: App.jsx  index.css  main.jsx
marketing/src/assets/: index.js
marketing/src/components/: Billing.jsx  Business.jsx  CardDeal.jsx  FeedbackCard.jsx  Hero.jsx  Navbar.jsx  Testimonials.jsx  index.js
marketing/src/components/content/: ControlBins.jsx  Routing.jsx  Security.jsx  Testimonials.jsx
marketing/src/constants/: index.js
routing/: bin_grid.py  network.py  perfect_matching.py  prova.py
routing_rs/: Cargo.toml
routing_rs/src/: link.rs  main.rs  matching.rs  network.rs  node.rs
rpi-app/: .gitignore  Cargo.toml  README.md  build.rs  package.sh
rpi-app/.cargo/: config.toml
rpi-app/.debian/: control  postinst.sh  prerm.sh  rpi-app.service
rpi-app/src/: config.rs  main.rs  nodeapi.rs  util.rs
rpi-app/src/sensors/: driver.rs  mod.rs  si7021.rs  vl53l0x.rs
rpi-app/src/sensors/vl53l0x/: device_setup.rs  io.rs  mod.rs  types.rs  util.rs
rpi-app/src/util/: error.rs  future.rs  mod.rs  stream.rs
server/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  diesel.toml  test.db
server/.cargo/: config.toml
server/migrations/2023-01-27-172054_create_nodes/: down.sql  up.sql
server/proto/: nodeapi.proto  server.proto
server/src/: config.rs  grpc_server.rs  http_server.rs  mailer.rs  main.rs  timer.rs  user_manager.rs
server/src/database/: mod.rs  models.rs  schema.rs
server/src/db/: entities.rs  entity.rs  mod.rs
server/src/db/migrations/: initial.rs  mod.rs
server/src/http_server/: bins.rs  entities.rs  mod.rs  user.rs  util.rs
server/src/routing/: link.rs  matching.rs  mod.rs  node.rs
server/src/utils/: mod.rs  network.rs
tests/: test_network.py  test_perfect_matching.py  utils.py
