[package]
name = "rpi-app"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
lto = "fat"

[dependencies]
tokio = { version = "1.24.2", features = ["full"] }
futures = "0.3.25"
i2cdev = "0.5.1"
byteorder = "1.4.3"
tonic = "0.8.3"
prost = "0.11.6"
async-trait = "0.1.63"
# Serialising
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.0"

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
tempfile = "3.3.0"
