[package]
name = "server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
lto = "fat"

[dependencies]
# Async
tokio = { version = "1.24.2", features = ["full"] }
futures-util = "0.3.25"
# HTTP Server
axum = "0.6.4"
# gRPC Server
tonic = "0.8.3"
tonic-reflection = "0.6.0"
prost = "0.11.6"
# serde
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.0"
# Email
lettre = { version = "0.10.2", default-features = false, features = ["tokio1", "rustls-tls", "tokio1-rustls-tls", "smtp-transport", "pool", "hostname", "builder"] }
# Database
sea-orm = { version = "0.10.7", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-migration = "0.10.7"
# Utilities
itertools = "0.10.5"

[build-dependencies]
# gRPC
tokio = { version = "1.24.2", features = ["full"] }
tonic-build = "0.8"
# Database
sea-orm = { version = "0.10.7", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-migration = "0.10.7"
sea-orm-entity-generator = { git = "https://github.com/harry1453/sea-orm-entity-generator", rev = "82d6629", features = ["runtime-tokio-rustls"] }

[dev-dependencies]
tempfile = "3.3.0"
