[package]
name = "server"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[profile.release]
strip = true
lto = "fat"

[dependencies]
# Async
tokio = { version = "1.24.2", features = ["full"] }
futures-util = "0.3.25"
# HTTP Server
axum = "0.6.4"
axum-sessions = "0.4.1"
tower-http = { version = "0.3.5", features = ["cors", "fs"] }
# gRPC Server
tonic = "0.8.3"
tonic-reflection = "0.6.0"
prost = "0.11.6"
# serde
serde = { version = "1.0.152", features = ["derive"] }
toml = "0.7.0"
# Email
lettre = { version = "0.10.2", default-features = false, features = ["tokio1", "rustls-tls", "tokio1-rustls-tls", "smtp-transport", "pool", "hostname", "builder"] }
# Database
sea-orm = { version = "0.10.7", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
sea-orm-migration = "0.10.7"
# Utilities
rand = { version = "0.8.5", features = ["min_const_gen"] }
pbkdf2 = "0.11.0"
anyhow = "1.0.68"
regex = "1.7.1"
lazy-regex = "2.4.1"
chrono = "0.4.23"

[build-dependencies]
# gRPC
tonic-build = "0.8"

[dev-dependencies]
tempfile = "3.3.0"
reqwest = { version = "0.11.14", features = ["cookies", "json"] }
portpicker = "0.1.1"
